# cryptoquant

./: .gitignore  .markdownlint-cli2.yaml  .pr44_body.md  README.md  pyproject.toml
.github/workflows/: ci.yml
CryptoQuant_ALL_Documents_v1.0/CryptoQuant_Full_Documentation_v1.0/: CryptoQuant_API_Spec_v1.0.docx
config/: .env.example  base.yaml  config.base.json  config.dev.json  config.prd.json  config.stg.json  dev.yaml  prd.yaml  stg.yaml
docs/: COMPLIANCE_AUDIT.md  CONFIG.md  MVP9_SENTIMENT.md  ROADMAP.md  SPRINT-RESULT.md
docs/legacy/CryptoQuant_ALL_Documents_v1.0/: CryptoQuant_Architecture_v1.0.docx  (+1 more)
scripts/: benchmark_event_bus.py  testnet_dry_run.py  validate_strategy_robustness.py
src/cryptoquant/: __init__.py  backtest.py  cli.py  config.py  core.py  reporting.py
src/cryptoquant.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_backtest_data_sources.py  test_backtest_indicators.py  test_backtest_multi_symbol.py  test_backtest_mvp11.py  test_backtest_replay.py  test_backtest_robustness.py  test_bar_aggregator.py  test_binance_gateway.py  test_binance_user_stream.py  test_capital_allocator.py  test_cli.py  test_code_skeleton.py  test_compliance_audit.py  test_config.py  test_core.py  test_data_platform_upgrade.py  test_data_sources.py  test_dry_run.py  test_event_bus.py  test_event_bus_benchmark.py  test_execution_flip_flow.py  test_high_availability.py  test_indicators.py  test_kill_switch.py  test_listen_key_provider.py  test_live_executor.py  test_low_latency_event_bus.py  test_market_dataflow.py  test_market_regime_detector.py  test_market_ws.py  test_market_ws_client.py  test_monitoring_alerts.py  test_multi_account_execution.py  test_multi_strategy_portfolio_manager.py  test_oms.py  test_oms_state_machine.py  test_operations_dashboard.py  test_orderbook_microstructure.py  test_paper_executor.py  (+18 more)
(+80 files in other folders)
