[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptoquant"
version = "0.1.0"
description = "CryptoQuant - event-driven quant trading research scaffold"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "bkes994408-cmd" }]
license = { text = "MIT" }

dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.9.0",
  "bandit>=1.7.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
